--- a/API.ipynb
+++ b/API.ipynb
@@ -27,7 +27,7 @@
     "}\n",
     "headers = {\n",
     "  'Accepts': 'application/json',\n",
-    "  'X-CMC_PRO_API_KEY': 'da37e937-a4ad-44b9-b71f-5f48c7beda2a',\n",
+    "  'X-CMC_PRO_API_KEY': '',\n",
     "}\n",
     "\n",
     "session = Session()\n",
